--- a/src/MauiTemplatesCLI/MauiResDict/MauiResDict.1.xaml
+++ b/src/MauiTemplatesCLI/MauiResDict/MauiResDict.1.xaml
@@ -1,6 +1,16 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!--#if (NoCodeBehind || XamlOnly)-->
 <?xaml-comp compile="true" ?>
+<!--#if (ImplicitNamespace)-->
+<ResourceDictionary>
+<!--#elif (GlobalNamespace)-->
+<ResourceDictionary
+    xmlns="http://schemas.microsoft.com/dotnet/maui/global"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:d="http://schemas.microsoft.com/dotnet/maui/global/design"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    mc:Ignorable="d">
+<!--#else-->
 <!--#if (RootFolder)-->
 <ResourceDictionary
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
@@ -9,8 +19,6 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:local="clr-namespace:MyApp.RootNamespace"
     mc:Ignorable="d">
-    <!-- Define your resources here -->
-</ResourceDictionary>
 <!--#else-->
 <ResourceDictionary
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
@@ -19,8 +27,36 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:local="clr-namespace:MyApp.Namespace"
     mc:Ignorable="d">
-    <!-- Define your resources here -->
-</ResourceDictionary>
+<!--#endif-->
+<!--#endif-->
+<!--#else-->
+<!--#if (ImplicitNamespace)-->
+<!--#if (RootFolder)-->
+<ResourceDictionary
+    x:Class="MyApp.RootNamespace.MauiResDict__1"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
+<!--#else-->
+<ResourceDictionary
+    x:Class="MyApp.Namespace.MauiResDict__1"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
+<!--#endif-->
+<!--#elif (GlobalNamespace)-->
+<!--#if (RootFolder)-->
+<ResourceDictionary
+    x:Class="MyApp.RootNamespace.MauiResDict__1"
+    xmlns="http://schemas.microsoft.com/dotnet/maui/global"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:d="http://schemas.microsoft.com/dotnet/maui/global/design"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    mc:Ignorable="d">
+<!--#else-->
+<ResourceDictionary
+    x:Class="MyApp.Namespace.MauiResDict__1"
+    xmlns="http://schemas.microsoft.com/dotnet/maui/global"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:d="http://schemas.microsoft.com/dotnet/maui/global/design"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    mc:Ignorable="d">
 <!--#endif-->
 <!--#else-->
 <!--#if (RootFolder)-->
@@ -32,8 +68,6 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:local="clr-namespace:MyApp.RootNamespace"
     mc:Ignorable="d">
-    <!-- Define your resources here -->
-</ResourceDictionary>
 <!--#else-->
 <ResourceDictionary
     x:Class="MyApp.Namespace.MauiResDict__1"
@@ -43,7 +77,8 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:local="clr-namespace:MyApp.Namespace"
     mc:Ignorable="d">
+<!--#endif-->
+<!--#endif-->
+<!--#endif-->
     <!-- Define your resources here -->
 </ResourceDictionary>
-<!--#endif-->
-<!--#endif-->
