--- a/src/MauiTemplatesCLI/MauiShell/MauiShell.1Shell.xaml
+++ b/src/MauiTemplatesCLI/MauiShell/MauiShell.1Shell.xaml
@@ -1,5 +1,18 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!--#if (RootFolder)-->
+<!--#if (ImplicitNamespace)-->
+<Shell
+    x:Class="MyApp.RootNamespace.MauiShell__1Shell"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
+<!--#elif (GlobalNamespace)-->
+<Shell
+    x:Class="MyApp.RootNamespace.MauiShell__1Shell"
+    xmlns="http://schemas.microsoft.com/dotnet/maui/global"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:d="http://schemas.microsoft.com/dotnet/maui/global/design"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    mc:Ignorable="d">
+<!--#else-->
 <Shell
     x:Class="MyApp.RootNamespace.MauiShell__1Shell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
@@ -7,6 +20,20 @@
     xmlns:d="http://schemas.microsoft.com/dotnet/2021/maui/design"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:local="clr-namespace:MyApp.RootNamespace"
+    mc:Ignorable="d">
+<!--#endif-->
+<!--#else-->
+<!--#if (ImplicitNamespace)-->
+<Shell
+    x:Class="MyApp.Namespace.MauiShell__1Shell"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
+<!--#elif (GlobalNamespace)-->
+<Shell
+    x:Class="MyApp.Namespace.MauiShell__1Shell"
+    xmlns="http://schemas.microsoft.com/dotnet/maui/global"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:d="http://schemas.microsoft.com/dotnet/maui/global/design"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 <!--#else-->
 <Shell
@@ -17,6 +44,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:local="clr-namespace:MyApp.Namespace"
     mc:Ignorable="d">
+<!--#endif-->
 <!--#endif-->
     <!--
         The overall app visual hierarchy is defined here, along with navigation.
